--- a/Interface/Views/Autenticacao/SignUp.cshtml
+++ b/Interface/Views/Autenticacao/SignUp.cshtml
@@ -9,6 +9,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/localization/messages_pt_BR.min.js" integrity="sha512-PHX1u45elKeOnEy2N3H1tVwyKDD8EQtnmNqNQ8LfMXj09a+JjfX9wWSwr61nvRzJZsLt1/YRkhUyJmv/sbRuCA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.min.js" integrity="sha512-xq+Vm8jC94ynOikewaQXMEkJIOBp7iArs3IhFWSWdRT3Pq8wFz46p+ZDFAR7kHnSFf+zUv52B3prRYnbDRdgog==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="~/js/AlterarSenha.min.js" asp-append-version="true" ></script>
+    <script>
+        $(document).ready(function () {
+            function toggleCamposMedico() {
+                if ($('#souMedicoCheck').is(':checked')) {
+                    $('#camposMedico').show();
+                } else {
+                    $('#camposMedico').hide();
+                }
+            }
+
+            // Executa ao carregar
+            toggleCamposMedico();
+
+            // Executa ao clicar no checkbox
+            $('#souMedicoCheck').change(function () {
+                toggleCamposMedico();
+            });
+        });
+    </script>
 }
 @if (ViewBag.MensagemErro != null)
 {
@@ -16,10 +35,12 @@
         @ViewBag.MensagemErro
     </div>
 }
+
 <div class="card">
     <div class="card-body login-card-body">
         <p class="login-box-msg">Cadastre-se</p>
         <form action="~/Autenticacao/SignUp" method="post">
+            @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Nome completo" asp-for="Nome">
                 <div class="input-group-append">
@@ -28,6 +49,7 @@
                     </div>
                 </div>
             </div>
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             <div class="input-group mb-3">
                 <input type="email" class="form-control" placeholder="Email"  asp-for="Email">
                 <div class="input-group-append">
@@ -36,6 +58,48 @@
                     </div>
                 </div>
             </div>
+                @Html.ValidationMessageFor(model => model.Cpf, "", new { @class = "text-danger" })
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="CPF" asp-for="Cpf">
+                <div class="input-group-append">
+                    <div class="input-group-text">
+                        <span class="fas fa-envelope"></span>
+                    </div>
+                </div>
+            </div>
+            @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
+            <div class="input-group mb-3">
+                <input type="date" class="form-control" placeholder="Data Nascimento" asp-for="DataNascimento">
+                <div class="input-group-append">
+                    <div class="input-group-text">
+                        <span class="fas fa-envelope"></span>
+                    </div>
+                </div>
+            </div>
+            <div id="camposMedico" style="display:none;">
+                @Html.ValidationMessageFor(model => model.Crm, "", new { @class = "text-danger" })
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="CRM" asp-for="Crm">
+                    <div class="input-group-append">
+                        <div class="input-group-text">
+                            <span class="fas fa-id-card"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="input-group mb-3">
+                    <select class="form-control" asp-for="IdEspecialidade" asp-items="Model.Especialidades">
+                        <option value="">Selecione uma especialidade</option>
+                    </select>
+                    <div class="input-group-append">
+                        <div class="input-group-text">
+                            <span class="fas fa-stethoscope"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
             <div class="input-group mb-3">
                 <input type="password" class="form-control" placeholder="Senha"  asp-for="Senha">
                 <div class="input-group-append">
@@ -44,6 +108,7 @@
                     </div>
                 </div>
             </div>
+            @Html.ValidationMessageFor(model => model.ConfirmarSenha, "", new { @class = "text-danger" })
             <div class="input-group mb-3">
                 <input type="password" class="form-control" placeholder="Confirmar Senha"  asp-for="ConfirmarSenha">
                 <div class="input-group-append">
@@ -51,6 +116,10 @@
                         <span class="fas fa-lock"></span>
                     </div>
                 </div>
+            </div>
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" asp-for="SouMedico" id="souMedicoCheck" />
+                <label class="form-check-label" for="souMedicoCheck">Sou Médico</label>
             </div>
             <div class="row">
                 <div class="col-12">
