--- a/Interface/Views/Shared/_Layout.cshtml
+++ b/Interface/Views/Shared/_Layout.cshtml
@@ -22,9 +22,9 @@
                 <p>Sidebar content</p>
             </div>
         </aside>
-        <footer class="main-footer">
-            <div class="float-right d-none d-sm-inline">...</div>
-            <strong>Copyright &copy; 2014-2019 <a href="https://adminlte.io">AdminLTE.io</a></strong> All rights reserverd.
+        <footer class="main-footer text-center">
+            <div class="float-right d-none d-sm-inline hori"></div>
+            <strong>Copyright &copy; 2025 <a href="https://localhost:44300/Home/Index">Health&Med</a></strong> All rights reserverd.
         </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" integrity="sha512-3n19xznO0ubPpSwYCRRBgHh63DrV+bdZfHK52b1esvId4GsfwStQNPJFjeQos2h3JwCmZl0/LgLxSKMAI55hgw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
